<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>su.pernova</groupId>
        <artifactId>supernova-parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <!-- Search parent POM in Maven repository. -->
        <relativePath/>
    </parent>
    <artifactId>assertions-parent</artifactId>
    <name>Supernova Assertions - Parent</name>
    <description>Intuitive and minimalistic assertions for Java.</description>
    <url>https://github.com/peterdemaeyer/supernova-assertions/</url>
    <packaging>pom</packaging>
    <version>${revision}${changelist}</version>
    <scm>
        <connection>scm:git:git://github.com/peterdemaeyer/supernova-assertions.git</connection>
        <developerConnection>scm:git:ssh://github.com:peterdemaeyer/supernova-assertions.git</developerConnection>
        <url>https://github.com/peterdemaeyer/supernova-assertions/tree/main</url>
    </scm>
    <modules>
        <module>assertions</module>
        <module>assertions-junit3</module>
        <module>assertions-junit4</module>
        <module>assertions-junit5</module>
        <module>assertions-junit4-junit5</module>
        <module>assertions-aggregate</module>
    </modules>
    <properties>
        <revision>2.0.0</revision>
        <changelist>-SNAPSHOT</changelist>
        <assertj.version>3.27.6</assertj.version>
        <hamcrest.version>2.2</hamcrest.version>
        <opentest4j.version>1.3.0</opentest4j.version>
        <maven.compiler.release>21</maven.compiler.release>
    </properties>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-install-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <configuration>
                    <skipPublishing>true</skipPublishing>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.opentest4j</groupId>
                <artifactId>opentest4j</artifactId>
                <version>${opentest4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest</artifactId>
                <version>${hamcrest.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
